# ragforq

./: .dockerignore  .env  .env.example  .env.local  .env.production  .gitignore  Dockerfile  README.md  USAGE.md  app.py  app_worker.py  pyproject.toml  requirements.txt  supervisord.conf
.gitea/workflows/: main.yml
api/: main.py  main_pro.py
config/: config.py  models_list.json  rag_optimization.py  user_setup.json
docs/: CORRECTED_IMPLEMENTATION_REPORT.md  DEPENDENCIES.md  DOCKER_DEV_GUIDE.md  DOCKER_GPU_GUIDE.md  DYNAMIC_RAG_IMPLEMENTATION_SUMMARY.md  DYNAMIC_RAG_KNOWLEDGE_ANSWER.md  DYNAMIC_RAG_PROPOSAL.md  DYNAMIC_RAG_REFACTORED_ARCHITECTURE.md  DYNAMIC_RAG_USAGE.md  DYNAMIC_RAG_USAGE_GUIDE.md  ENVIRONMENT_CONFIG_COMPARISON.md  FINAL_IMPLEMENTATION_REPORT.md  FOLDER_SELECTION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  RAG_COMPATIBILITY_ANALYSIS.md  RAG_ENGINES_UPDATE_SUMMARY.md  RAG_OPTIMIZATION_GUIDE.md  README.md  VECTOR_CONTENT_MAINTENANCE.md  VECTOR_DB_MAINTENANCE.md  VERSION_MANAGEMENT.md  enterprise_deployment.md  huggingface_setup.md  local_model_detection.md
frontend/: folder_browser.py  help_system.py  model_selector.py  setup_flow.py  streamlit_app.py
indexer/: document_indexer.py  file_crawler.py
rag_engine/: README.md  dynamic_english_engine.py  dynamic_rag_base.py  dynamic_rag_engine.py  dynamic_simplified_chinese_engine.py  dynamic_thai_engine.py  dynamic_traditional_chinese_engine.py  english_engine.py  interfaces.py  rag_engine.py  rag_engine_factory.py  simplified_chinese_engine.py  thai_engine.py  traditional_chinese_engine.py
scripts/: README.md  add_model_files.py  backfill_model_files.py  build-base-image.sh  build_docker.bat  build_docker.py  build_docker.sh  check_dependencies.py  check_env_config.py  check_gpu.py  check_hf_environment.py  check_system_coupling.py  check_version_consistency.py  dependency_audit.py  diagnose_indexing.py  docker_dev.py  initial_indexing.py  list_models.py  migrate_existing_data.py  model_training_manager.py  model_training_manager_debug.py  monitor_changes.py  monitor_indexing.py  pin_core_dependencies.py  quick_start.py  rag_diagnostic_tool.py  reindex.py  resume_indexing.py  stable_resume_indexing.py  sync_dependencies.py  test_indexing.py  test_single_file.py  verify_rag_compatibility.py
test_files/: sample.txt  technology.md
tests/: README.md  cleanup_tests.py  test_api_endpoints.py  test_complete_system.py  test_content_maintenance.py  test_dynamic_rag.py  test_dynamic_rag_comprehensive.py  test_dynamic_rag_full.py  test_dynamic_rag_knowledge_answer.py  test_dynamic_rag_local.py  test_dynamic_rag_minimal.py  test_dynamic_rag_simple.py  test_folder_selection.py  test_frontend.py  test_frontend_fix.py  test_models.py  test_traditional_rag_compatibility.py  test_unified_system.py  test_vector_db_maintenance.py
utils/: faiss_loader.py  file_parsers.py  hf_langchain_wrapper.py  huggingface_utils.py  log_manager.py  ml_optimization.py  model_manager.py  ollama_embeddings.py  ollama_utils.py  platform_manager.py  read_only_vector_store.py  setup_flow_manager.py  state_manager.py  timeout_rag_engine.py  training_lock_manager.py  vector_db_manager.py  vllm_manager.py
vector_db/: indexed_files.pkl  indexing_progress.json
