[tool.poetry]
name = "ragforq"
version = "0.1.0"
description = "A RAG application with Streamlit and FastAPI."
authors = ["Lin.Tsai <lin.tsai@qsitw.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.11"  # 明確指定 Python 3.10.x 版本
streamlit = "^1.47.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sentence-transformers = "^2.7.0"
faiss-cpu = "^1.8.0"  # 使用 CPU 版本，Windows 兼容性更好
unstructured = {extras = ["pdf", "docx"], version = "^0.14.4"}
python-dotenv = "^1.0.1"
pypdf = "^4.2.0"
pymupdf = "^1.26.3"
openpyxl = "^3.1.5"
python-docx = "^1.2.0"
langchain = "^0.3.26"
langchain-huggingface = "^0.1.0"
langchain-text-splitters = "^0.3.8"
transformers = "^4.35.0"
torch = "^2.0.0"
accelerate = ">=0.20.0"
datasets = "^2.14.0"
langchain-community = "^0.3.27"
annotated-types = "^0.7.0"
streamlit-autorefresh = "^1.0.1"
xlrd = "^2.0.2"
olefile = "^0.47"
pytz = "^2025.2"
psutil = "^7.0.0"
requests = "^2.31.0"
numpy = "^1.24.0"
pydantic = "^2.0.0"
tqdm = "^4.66.0"
pytesseract = "^0.3.10"
pdf2image = "^1.16.3"
watchdog = "^3.0.0"
aiohttp = "^3.9.1"
pillow = "^10.0.0"
langchain-ollama = "^0.3.6"
bitsandbytes = "^0.43.2"
sentencepiece = "^0.1.99"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"